[package]
name = "tiny-tune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
clap = "4.4.12"
fern = "0.6.2"
log = "0.4.20"
chrono = "0.4.31"
hound = "3.5.1"
midly = "0.5.3"
rodio = "0.17.3"
