[package]
name = "tiny-tune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = "4.5.18"
fern = "0.6.2"
log = "0.4.22"
chrono = "0.4.38"
hound = "3.5.1"
midly = "0.5.3"
rodio = "0.19.0"
